--- a/client/pom.xml
+++ b/client/pom.xml
@@ -15,4 +15,17 @@
     <artifactId>client</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>pl.training.bank</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-client-all</artifactId>
+            <version>13.0.0.Final</version>
+        </dependency>
+    </dependencies>
+
 </project>
