--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,4 +15,12 @@
     <artifactId>api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>pl.training.bank</groupId>
+            <artifactId>entity</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
