--- a/service/pom.xml
+++ b/service/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>entity</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
