--- a/client/pom.xml
+++ b/client/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>wildfly-client-all</artifactId>
             <version>13.0.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
 
 </project>
