--- a/entity/pom.xml
+++ b/entity/pom.xml
@@ -15,4 +15,13 @@
     <artifactId>entity</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.3.2.Final</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
 </project>
