--- a/client/pom.xml
+++ b/client/pom.xml
@@ -15,6 +15,10 @@
     <artifactId>client</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <resteasy.version>3.6.0.Final</resteasy.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>pl.training.bank</groupId>
@@ -30,6 +34,21 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-client</artifactId>
+            <version>${resteasy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxb-provider</artifactId>
+            <version>${resteasy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson2-provider</artifactId>
+            <version>${resteasy.version}</version>
         </dependency>
     </dependencies>
 
