--- a/test/pom.xml
+++ b/test/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <groupId>pl.training.bank</groupId>
-        <artifactId>core</artifactId>
+        <groupId>pl.training</groupId>
+        <artifactId>bank</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
